--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,10 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
+	background-image: linear-gradient(to right, #CA2133, #F8DC75, #6236FF);
 	background-size: 200%;
 	font-size: 1.2rem;
-	color: #fff;
+	color: #121D33;
 	font-family: 'Poppins', sans-serif;
 	text-transform: uppercase;
 	margin: 1rem 0;
