--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #CA2133, #F8DC75, #6236FF);
+	background-image: linear-gradient(to right, #CA2133, #F8DC75, #CA2133);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #121D33;
